--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+
+
+      <div class="tab-box">
+        <button class="tab-btn">Tab 1</button>
+        <button class="tab-btn">Tab 2</button>
+        <button class="tab-btn">Tab 3</button>
+      </div>
+
+
+      <div class="content-box">
+
+        <div class="content">
+          <h2>Tab 1</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, id
+            distinctio consectetur qui fugiat cupiditate pariatur, odio veniam
+            aliquid facere quae! Laudantium suscipit distinctio totam, iste
+            tempora aliquid voluptatum exercitationem?
+          </p>
+        </div>
+
+
+        <div class="content">
+            <h2>Tab 2</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, id
+              distinctio consectetur qui fugiat cupiditate pariatur, odio veniam
+              aliquid facere quae! Laudantium suscipit distinctio totam, iste
+              tempora aliquid voluptatum exercitationem?
+            </p>
+          </div>
+
+
+          <div class="content">
+            <h2>Tab 3</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, id
+              distinctio consectetur qui fugiat cupiditate pariatur, odio veniam
+              aliquid facere quae! Laudantium suscipit distinctio totam, iste
+              tempora aliquid voluptatum exercitationem?
+            </p>
+          </div>
+
+
+      </div>
+    </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
