--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
 
       <div class="tab-box">
-        <button class="tab-btn">Tab 1</button>
+        <button class="tab-btn active">Tab 1</button>
         <button class="tab-btn">Tab 2</button>
         <button class="tab-btn">Tab 3</button>
+        <div class="line"></div>
       </div>
 
 
       <div class="content-box">
 
-        <div class="content">
+        <div class="content active">
           <h2>Tab 1</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, id
